# routes/section.route.js
@@ -10,27 +10,42 @@ const { createSectionSchema, updateSectionSchema } = require('../schema/section.
 const router = express.Router()
 
 // 取得某課程的所有章節
-router.get('/course/:courseId', sectionController.getSectionsByCourseId)
+router.get('/:courseId/section',...handleMiddleware(
+  [isAuth, isTeacher], sectionController.getSection))
+/* ...handleMiddleware(
+  [isAuth, isTeacher]),  */
 
 // 新增章節
-router.post(
+router.post('/:courseId/section',   ...handleMiddleware(
+  [isAuth, isTeacher], sectionController.postSection))
+
+// 修改章節
+router.patch('/section/:sectionId',   ...handleMiddleware(
+  [isAuth, isTeacher], sectionController.patchSection))
+
+// 刪除章節
+router.delete('/section/:sectionId',   ...handleMiddleware(
+  [isAuth, isTeacher], sectionController.deleteSection))
+
+// 新增章節
+/* router.post(
   '/',
   ...handleMiddleware(
     [isAuth, isTeacher, validateSchema(createSectionSchema)],
     sectionController.createSection
   )
-)
+) */
 
 // 更新章節
-router.post(
+/* router.post(
   '/:id/update',
   ...handleMiddleware(
     [isAuth, isTeacher, validateSchema(updateSectionSchema)],
     sectionController.updateSection
   )
-)
+) */
 
 // 刪除章節
-router.delete('/:id', ...handleMiddleware([isAuth, isTeacher], sectionController.deleteSection))
+/* router.delete('/:id', ...handleMiddleware([isAuth, isTeacher], sectionController.deleteSection)) */
 
 module.exports = router
