# swagger-output.json
@@ -959,6 +959,277 @@
         }
       }
     },
+    "/api/v1/course/{courseId}/section": {
+      "get": {
+        "tags": ["Section"],
+        "summary": "取得課程章節",
+        "parameters": [
+          {
+            "name": "courseId",
+            "in": "path",
+            "description": "課程ID",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "成功取得課程章節"
+          }
+        }
+      },
+      "post": {
+        "tags": ["Section"],
+        "summary": "新增課程章節",
+        "parameters": [
+          {
+            "name": "courseId",
+            "in": "path",
+            "description": "課程ID",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "in": "body",
+            "name": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "main_section_title": { "type": "string", "example": "第一章節: 準備工作" }
+              },
+              "required": ["main_section_title"]
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "成功新增課程章節"
+          }
+        }
+      }
+    },
+
+    "/api/v1/course/section/{sectionId}": {
+      "patch": {
+        "tags": ["Section"],
+        "summary": "修改課程章節",
+        "parameters": [
+          {
+            "name": "sectionId",
+            "in": "path",
+            "description": "章節ID",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "in": "body",
+            "name": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "main_section_title": { "type": "string", "example": "第二章節： 準備材料" }
+              },
+              "required": ["main_section_title"]
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "成功修改課程章節"
+          }
+        }
+      },
+      "delete": {
+        "tags": ["Section"],
+        "summary": "刪除課程章節",
+        "parameters": [
+          {
+            "name": "sectionId",
+            "in": "path",
+            "description": "章節ID",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "成功刪除課程章節"
+          }
+        }
+      }
+    },
+    "/api/v1/course/section/{sectionId}/subsection": {
+      "get": {
+        "tags": ["Subsection"],
+        "summary": "取得特定章節小節",
+        "parameters": [
+          {
+            "name": "sectionId",
+            "in": "path",
+            "description": "章節ID",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "成功取得小節列表"
+          }
+        }
+      },
+      "post": {
+        "tags": ["Subsection"],
+        "summary": "新增小節",
+        "parameters": [
+          {
+            "name": "sectionId",
+            "in": "path",
+            "description": "章節ID",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "in": "body",
+            "name": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "subsection_title": { "type": "string", "example": "subtitle3" },
+                "is_preview_available": { "type": "boolean", "example": true }
+              },
+              "required": ["subsection_title", "is_preview_available"]
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "成功新增小節"
+          }
+        }
+      }
+    },
+    "/api/v1/course/{courseId}/subsection": {
+      "patch": {
+        "tags": ["Subsection"],
+        "summary": "批次修改章節小節",
+        "parameters": [
+          {
+            "name": "courseId",
+            "in": "path",
+            "description": "課程ID",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "in": "body",
+            "name": "body",
+            "required": true,
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "object",
+                "properties": {
+                  "id": { "type": "string", "example": "f4891a3f-2248-4108-94bb-2264f6677b95" },
+                  "main_section_title": { "type": "string", "example": "第一章節: 工作1" },
+                  "order_index": { "type": "integer", "example": 1 },
+                  "subsections": {
+                    "type": "array",
+                    "items": {
+                      "type": "object",
+                      "properties": {
+                        "id": { "type": "string", "example": "206cbb08-aa7b-4ebf-bec7-26bcf20e3d33" },
+                        "section_id": { "type": "string", "example": "f4891a3f-2248-4108-94bb-2264f6677b95" },
+                        "subsection_title": { "type": "string", "example": "sub1title1" },
+                        "order_index": { "type": "integer", "example": 1 },
+                        "is_preview_available": { "type": "boolean", "example": true }
+                      },
+                      "required": ["id", "section_id", "subsection_title", "order_index", "is_preview_available"]
+                    }
+                  }
+                },
+                "required": ["id", "main_section_title", "order_index", "subsections"]
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "成功修改章節小節"
+          }
+        }
+      }
+    },
+    "/api/v1/subsection/upload/{subsectionId}/upload-video": {
+      "post": {
+        "tags": ["Subsection"],
+        "summary": "上傳小節影片",
+        "consumes": ["multipart/form-data"],
+        "parameters": [
+          {
+            "name": "subsectionId",
+            "in": "path",
+            "description": "小節ID",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "video",
+            "in": "formData",
+            "description": "上傳影片檔案",
+            "required": true,
+            "type": "file"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "成功上傳小節影片"
+          }
+        }
+      },
+      "delete": {
+        "tags": ["Subsection"],
+        "summary": "刪除小節影片",
+        "parameters": [
+          {
+            "name": "subsectionId",
+            "in": "path",
+            "description": "小節ID",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "成功刪除小節影片"
+          }
+        }
+      }
+    },
+
+    "/api/v1/course/subsection/{subsectionId}": {
+      "delete": {
+        "tags": ["Subsection"],
+        "summary": "刪除小節(包括影片)",
+        "parameters": [
+          {
+            "name": "subsectionId",
+            "in": "path",
+            "description": "小節ID",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "成功刪除小節"
+          }
+        }
+      }
+    }
+    ,
     "/api/v1/cart/": {
       "get": {
         "tags": ["Cart"],
